--- a/www/index.html
+++ b/www/index.html
@@ -19,7 +19,9 @@
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 
+    <script src="lib/bluebird.min.js"></script>
     <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <script src="lib/ionic.cloud.min.js"></script>
 
      <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
     <script src="lib/ngCordova/dist/ng-cordova.js"></script>
@@ -31,6 +33,7 @@
     <script src="https://www.gstatic.com/firebasejs/3.6.10/firebase.js"></script>
     <script src="https://cdn.firebase.com/libs/angularfire/2.3.0/angularfire.min.js"></script>
 
+    <script src="lib/ionic-rating/ionic-rating.min.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
