Added phone screen:

--- a/www/index.html
+++ b/www/index.html
@@ -15,14 +15,15 @@
           .catch(err => console.log('Error', err));
       }
     </script>-->
-    
+    <link href="lib/ionic-filter-bar/dist/ionic.filter.bar.min.css" rel="stylesheet">
+
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 
     <script src="lib/bluebird.min.js"></script>
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="lib/ionic.cloud.min.js"></script>
-
+    <script src="lib/ionic-filter-bar/dist/ionic.filter.bar.min.js"></script>
      <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
     <script src="lib/ngCordova/dist/ng-cordova.js"></script>
     <script src="lib/ng-cordova-oauth/dist/ng-cordova-oauth.min.js"></script>
