--- a/www/index.html
+++ b/www/index.html
@@ -31,8 +31,8 @@
     <script src="cordova.js"></script>
 
     <!-- Firebase -->
-    <script src="https://www.gstatic.com/firebasejs/3.6.10/firebase.js"></script>
-    <script src="https://cdn.firebase.com/libs/angularfire/2.3.0/angularfire.min.js"></script>
+    <script src="lib/firebase/firebase.js"></script>
+    <script src="lib/angularfire/dist/angularfire.min.js"></script>
 
     <script src="lib/ionic-rating/ionic-rating.min.js"></script>
 
